Update and rename index.html to Run Me!.html

--- a/Run Me!.html
+++ b/Run Me!.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+is<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -27,8 +27,8 @@
     <div class="grid">
       <div
         class="grid-item"
-        style="background-image: url('img/tetris.png')"
-        onclick="openFile('games/tetris/index.html')"
+        style="background-image: url('img/hextris.ico')"
+        onclick="openFile('games/hextris/index.html')"
       ></div>
     <script src="script.js"></script>
   </body>
