--- a/Run Me!.html
+++ b/Run Me!.html
@@ -8,7 +8,7 @@ is<!DOCTYPE html>
     <!-- Page icon -->
     <link
       rel="shortcut icon"
-      href="https://ssl.gstatic.com/images/branding/product/1x/drive_2020q4_48dp.png"
+      href="img/favicon.png"
       type="image/x-icon"
     />
     <link rel="stylesheet" href="style.css" />
