--- a/Run Me!.html
+++ b/Run Me!.html
@@ -1,4 +1,4 @@
-is<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -18,6 +18,7 @@ is<!DOCTYPE html>
     </script>
   </head>
   <body>
+    <a href="https://github.com/NCResources/Local-Website/archive/refs/heads/main.zip" target="_blank">Download and run locally!</a>
     <right
       ><div class="mode">
         Dark mode:
