--- a/Run Me!.html
+++ b/Run Me!.html
@@ -18,7 +18,7 @@
     </script>
   </head>
   <body>
-    <a href="https://github.com/NCResources/Local-Website/archive/refs/heads/main.zip" target="_blank">Download and run locally!</a>
+    <a href="https://github.com/NCResources/Local-Website/archive/refs/heads/main.zip" target="_blank">Download this site AND play offline!</a>
     <right
       ><div class="mode">
         Dark mode:
@@ -28,7 +28,7 @@
     <div class="grid">
       <div
         class="grid-item"
-        style="background-image: url('img/hextris.ico')"
+        style="background-image: url('img/hextris.png')"
         onclick="openFile('games/hextris/index.html')"
       ></div>
     <script src="script.js"></script>
