--- a/Run Me!.html
+++ b/Run Me!.html
@@ -18,7 +18,7 @@
     </script>
   </head>
   <body>
-    <a href="https://github.com/NCResources/Local-Website/archive/refs/heads/main.zip" target="_blank">Download this site AND play offline!</a>
+    <a href="https://github.com/NCResources/Local-Website/archive/refs/heads/main.zip" target="_blank">Download this site to play offline!</a>
     <right
       ><div class="mode">
         Dark mode:
@@ -30,6 +30,11 @@
         class="grid-item"
         style="background-image: url('img/hextris.png')"
         onclick="openFile('games/hextris/index.html')"
+      ></div>
+      <div
+        class="grid-item"
+        style="background-image: url('img/snake.png')"
+        onclick="openFile('games/snake/index.html')"
       ></div>
     <script src="script.js"></script>
   </body>
