--- a/Run Me!.html
+++ b/Run Me!.html
@@ -28,6 +28,11 @@
     <div class="grid">
       <div
         class="grid-item"
+        style="background-image: url('img/tetris.png')"
+        onclick="openFile('games/tetris/index.html')"
+      ></div>
+      <div
+        class="grid-item"
         style="background-image: url('img/hextris.png')"
         onclick="openFile('games/hextris/index.html')"
       ></div>
@@ -36,6 +41,7 @@
         style="background-image: url('img/snake.png')"
         onclick="openFile('games/snake/index.html')"
       ></div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
