--- a/games/tetris/index.html
+++ b/games/tetris/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
   <title>Javascript Tetris</title>
+  <link
+      rel="shortcut icon"
+      href="img/tetris.png"
+      type="image/x-icon"
+    />
   <style>
     body      { font-family: Helvetica, sans-serif; }
     #tetris   { margin: 1em auto; padding: 1em; border: 4px solid black; border-radius: 10px; background-color: #F8F8F8; }
