--- a/games/tetris/index.html
+++ b/games/tetris/index.html
@@ -4,7 +4,7 @@
   <title>Javascript Tetris</title>
   <link
       rel="shortcut icon"
-      href="img/tetris.png"
+      href="tetris.png"
       type="image/x-icon"
     />
   <style>
