--- a/Run Me!.html
+++ b/Run Me!.html
@@ -41,6 +41,11 @@
         style="background-image: url('img/snake.png')"
         onclick="openFile('games/snake/index.html')"
       ></div>
+      <div
+        class="grid-item"
+        style="background-image: url('img/eaglercraft.png')"
+        onclick="openFile('games/eaglercraft.html')"
+      ></div>
     </div>
     <script src="script.js"></script>
   </body>
