--- a/Run Me!.html
+++ b/Run Me!.html
@@ -18,7 +18,7 @@
     </script>
   </head>
   <body>
-    <a id="download-link" onload="hideOnProtocol('file:', 'download-link')" href="github.com/NCResources/Local-Website/archive/refs/heads/main.zip" target="_blank">Download this site to play offline!</a>
+    <a id="download-link" onload="hideOnProtocol('file:', 'download-link')" href="//github.com/NCResources/Local-Website/archive/refs/heads/main.zip" target="_blank">Download this site to play offline!</a>
     <right
       ><div class="mode">
         Dark mode:
