Add download btn to the mainpage

--- a/index.html
+++ b/index.html
@@ -1,7 +1,40 @@
 <!DOCTYPE html>
 <html>
-<script>
-	window.location.href = "Run Me.html";
-</script>
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Download To Play Offline!</title>
+	<style>
+		button {
+			font-size: 1.2vw;
+			padding: 0;
+			position: fixed;
+			font-weight: bold;
+			left: 1vw;
+			top: 1.2vw;
+			z-index: 999;
+			background: 0;
+			color: #fff;
+			border: 0;
+		}
+
+		iframe {
+			width: 100vw;
+			height: 100vh;
+			position: fixed;
+			left: 0;
+			top: 0;
+		}
+	</style>
+</head>
+
+<body>
+	<header>
+		<button
+			onclick="window.location.href='https://github.com/NCSources0/Local-Gamesite/archive/refs/heads/main.zip'">Download</button>
+	</header>
+	<iframe src="Run Me.html"></iframe>
+</body>
 
 </html>
