Fix an annoying visual glitch

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			padding: 0;
 			position: fixed;
 			font-weight: bold;
-			left: 0.6vw;
+			left: 0.4vw;
 			top: 1.4vw;
 			z-index: 999;
 			background: 0;
@@ -35,6 +35,7 @@
 			position: fixed;
 			left: 0;
 			top: 0;
+			border: 0;
 		}
 	</style>
 </head>
