--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			color: #00f;
 			text-shadow: #00f 0 0 5px;
 			border: 0;
-			transition: all 0.1s;
+			transition: color 0.1s, text-shadow 0.1s;
 			cursor: pointer;
 		}
 
