--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Download To Play Offline!</title>
+	<link rel="shortcut icon" href="img/favicon.png" type="image/png" />
 	<link rel="stylesheet" href="style.css">
 	<style>
 		button {
