--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
   </header>
   <div id="grid-container">
-    <div class="webGL" style="background-image: url(img/1v1.lol.jpg)" onclick="openGame('1v1.lol/index.html')"
+    <div class="webGL" style="background-image: url(img/1v1.lol.jpg)" onclick="openGame('1v1.lol/1v1.lol/index.html')"
       id="grid-item">1v1.LOL</div>
   <div style="
           background-image: url(games/cookie-clicker/img/perfectCookie.png);
