--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <center>
       <handwriting style="font-size: 1.7vw">The Lobby</handwriting>
     </center>
-    <div class="download webGL"
+    <div class="download online"
       onclick="window.location.href='https://github.com/NCSources0/Local-Gamesite/archive/refs/heads/main.zip'">Download
     </div>
   </header>
   <div id="grid-container">
-    <div class="webGL" style="background-image: url(img/1v1.lol.jpg)" onclick="openGame('1v1.lol/1v1.lol/index.html')"
+    <div style="background-image: url(img/1v1.lol.jpg)" onclick="openGame('1v1.lol/index.html')"
       id="grid-item">1v1.LOL</div>
     <div style="
           background-image: url(games/cookie-clicker/img/perfectCookie.png);
