--- a/index.html
+++ b/index.html
@@ -20,12 +20,18 @@
     </div>
   </header>
   <div id="grid-container">
-    <div style="background-image: url(img/1v1.lol.jpg)" onclick="openGame('1v1.lol/index.html')"
-      id="grid-item">1v1.LOL</div>
+    <div style="background-image: url(games/1v1.lol/splash.png)" onclick="openGame('1v1.lol/index.html')"
+      id="grid-item">1v1.LOL
+    </div>
     <div style="
           background-image: url(games/cookie-clicker/img/perfectCookie.png);
         " onclick="openGame('cookie-clicker/index.html')" id="grid-item">
       Cookie Clicker
+    </div>
+    <div style="
+      background-image: url(games/2048/2048.png);
+    " onclick="openGame('cookie-clicker/index.html')" id="grid-item">
+      2048
     </div>
     <div style="
           background-image: url(games/hextris/images/icons/transparent.svg);
