--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <div style="
       background-image: url(games/2048/2048.png);
-    " onclick="openGame('cookie-clicker/index.html')" id="grid-item">
+    " onclick="openGame('2048/index.html')" id="grid-item">
       2048
     </div>
     <div style="
