--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
     </div>
   </header>
   <div id="grid-container">
-    <div style="background-image: url(games/1v1.lol/splash.png)" onclick="openGame('1v1.lol/index.html')"
-      id="grid-item">1v1.LOL
+    <div style="
+          background-image: url(games/1v1.lol/splash.png)
+        " onclick="openGame('1v1.lol/index.html')" id="grid-item">
+      1v1.LOL
     </div>
     <div style="
           background-image: url(games/cookie-clicker/img/perfectCookie.png);
