--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <div id="grid-container">
     <div style="background-image: url(games/1v1.lol/splash.png)"
-      onclick="openGame('1v1.lol/index.html')" id="grid-item" class="online">
+      onclick="openGame('1v1.lol/index.html')" id="grid-item">
       1v1.LOL
     </div>
 
