--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <version>Beta</version>
 
     <center>
-      <handwriting style="font-size: 1.7vw">The Lobby</handwriting>
+      <h style="font-size: 1.7vw">The Lobby</h>
     </center>
 
     <div class="download online"
@@ -71,6 +71,11 @@
     <div style="background-image: url(img/wordle.webp)"
       onclick="openGame('wordle/index.html')" id="grid-item">
       Wordle
+    </div>
+
+    <div style="background-image: url(img/katamari.png)"
+      onclick="openGame('katamari/index.html')" id="grid-item">
+      Katamari!
     </div>
   </div>
 
