--- a/index.html
+++ b/index.html
@@ -1,85 +1,119 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="img/favicon.png"/>
+    <title>The Lobby</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" href="img/favicon.png" type="image/png" />
-  <title>The Lobby</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
+  <body>
+    <header>
+      <version><button onclick="cloak()">Cloak</button> Beta</version>
 
-<body>
-  <header>
-    <version>Beta</version>
+      <center>
+        <h style="font-size: 1.7vw">The Lobby</h>
+      </center>
 
-    <center>
-      <h style="font-size: 1.7vw">The Lobby</h>
-    </center>
+      <div
+        class="download online"
+        onclick="window.location.href='https://github.com/NCSources0/Local-Gamesite/archive/refs/heads/main.zip'"
+      >
+        Download
+      </div>
+    </header>
 
-    <div class="download online"
-      onclick="window.location.href='https://github.com/NCSources0/Local-Gamesite/archive/refs/heads/main.zip'">Download
+    <div id="grid-container">
+      <div
+        style="background-image: url(games/1v1.lol/splash.png)"
+        onclick="openGame('1v1.lol/index.html')"
+        id="grid-item"
+      >
+        1v1.LOL
+      </div>
+
+      <div
+        style="background-image: url(games/cookie-clicker/img/perfectCookie.png)"
+        onclick="openGame('cookie-clicker/index.html')"
+        id="grid-item"
+      >
+        Cookie Clicker
+      </div>
+
+      <div
+        style="background-image: url(games/2048/2048.png)"
+        onclick="openGame('2048/index.html')"
+        id="grid-item"
+      >
+        2048
+      </div>
+
+      <div
+        style="background-image: url(games/hextris/images/icons/transparent.svg)"
+        onclick="openGame('hextris/index.html')"
+        id="grid-item"
+      >
+        Hextris
+      </div>
+
+      <div
+        style="background-image: url(img/eaglercraft.png)"
+        onclick="openGame('EaglercraftX.html')"
+        id="grid-item"
+      >
+        EaglercraftX 1.8
+      </div>
+
+      <div
+        style="background-image: url(img/tetris.png)"
+        onclick="openGame('tetris.html')"
+        id="grid-item"
+      >
+        Tetris
+      </div>
+
+      <div
+        style="background-image: url(games/xx142-b2exe/splash.png)"
+        onclick="openGame('xx142-b2.exe/index.html')"
+        id="grid-item"
+      >
+        xx142-b2.exe
+      </div>
+
+      <div
+        style="background-image: url(img/snake.png)"
+        onclick="openGame('snake/index.html')"
+        id="grid-item"
+      >
+        Snake
+      </div>
+
+      <div
+        style="background-image: url(games/its-adoorable/favicon.svg)"
+        onclick="openGame('its-adoorable/entercode.html')"
+        id="grid-item"
+      >
+        it's a(door)able
+      </div>
+
+      <div
+        style="background-image: url(img/wordle.webp)"
+        onclick="openGame('wordle/index.html')"
+        id="grid-item"
+      >
+        Wordle
+      </div>
+
+      <div
+        style="background-image: url(img/katamari.png)"
+        onclick="openGame('katamari/index.html')"
+        id="grid-item"
+      >
+        Katamari!
+      </div>
     </div>
-  </header>
 
-  <div id="grid-container">
-    <div style="background-image: url(games/1v1.lol/splash.png)"
-      onclick="openGame('1v1.lol/index.html')" id="grid-item">
-      1v1.LOL
-    </div>
-
-    <div style="background-image: url(games/cookie-clicker/img/perfectCookie.png)"
-      onclick="openGame('cookie-clicker/index.html')" id="grid-item">
-      Cookie Clicker
-    </div>
-
-    <div style="background-image: url(games/2048/2048.png)"
-      onclick="openGame('2048/index.html')" id="grid-item">
-      2048
-    </div>
-
-    <div style="background-image: url(games/hextris/images/icons/transparent.svg)"
-      onclick="openGame('hextris/index.html')" id="grid-item">
-      Hextris
-    </div>
-
-    <div style="background-image: url(img/eaglercraft.png)"
-      onclick="openGame('EaglercraftX.html')" id="grid-item">
-      EaglercraftX 1.8
-    </div>
-
-    <div style="background-image: url(img/tetris.png)"
-      onclick="openGame('tetris.html')" id="grid-item">
-      Tetris
-    </div>
-
-    <div style="background-image: url(games/xx142-b2exe/splash.png)"
-      onclick="openGame('xx142-b2.exe/index.html')" id="grid-item">
-      xx142-b2.exe
-    </div>
-
-    <div style="background-image: url(img/snake.png)"
-      onclick="openGame('snake/index.html')" id="grid-item">
-      Snake
-    </div>
-
-    <div style="background-image: url(games/its-adoorable/favicon.svg)"
-      onclick="openGame('its-adoorable/entercode.html')" id="grid-item">
-      it's a(door)able
-    </div>
-
-    <div style="background-image: url(img/wordle.webp)"
-      onclick="openGame('wordle/index.html')" id="grid-item">
-      Wordle
-    </div>
-
-    <div style="background-image: url(img/katamari.png)"
-      onclick="openGame('katamari/index.html')" id="grid-item">
-      Katamari!
-    </div>
-  </div>
-
-  <script src="script.js"></script>
-</body>
-
+    <script src="script.js"></script>
+  </body>
 </html>
