--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="img/favicon.png"/>
+    <link rel="shortcut icon" href="img/favicon.png" />
     <title>The Lobby</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -17,7 +17,15 @@
       </center>
 
       <div
-        class="download online"
+        class="fakeA iFrame"
+        style="top:calc(0.5vw-3px);font-family:MaterialSymbolsOutlined"
+        onclick="toggleFullscreen()"
+      >
+        open_in_full
+      </div>
+      <div
+        class="fakeA online"
+        style="top: calc(1.2vw - 3px);"
         onclick="window.location.href='https://github.com/NCSources0/Local-Gamesite/archive/refs/heads/main.zip'"
       >
         Download
